Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4998

lustre_idl.h compilation regression from LU-2684

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.6.0
    • Lustre 2.4.0, Lustre 2.4.1, Lustre 2.4.2, Lustre 2.5.1, Lustre 2.4.3
    • None
    • 3
    • 13847

      LU-2684 introduced a regression in lustre_idl.h. lustre_idl.h is currently packaged for use in user space. We are not permitted to use lustre kernel internals like CERROR in headers packaged for userspace.

            jhammond John Hammond
            morrone Christopher Morrone (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: