LU-4998 libcfs: move byte swapping to posix-types.h

Move the byteswapping macros defined for userspace
(__cpu_to_leXX(),...) from libcfs/include/libcfs/posix/libcfs.h to
libcfs/include/libcfs/posix/posix-types.h. This allows the packaged
lustre_idl.h to be compiled based on the packages headers. Include
posix-types.h in lustre/libiam.h and lustre/lustre_lfsck_user.h.

Add test_74a to conf-sanity.sh to ensure that each header installed in
/usr/include/lustre/ with the exception of the deprecated header
liblustreapi.h can be compiled without warning.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I0e99e3e0d18907488f2f8c94e33c58990262ee8a